Redirection implemented and ui changes

--- a/backend/LinkShortener/appsettings.json
+++ b/backend/LinkShortener/appsettings.json
@@ -5,7 +5,8 @@
   "Jwt": {
     "Secret": "DmFV/ne6KHVkA2T378kWfCRW2eLspfLTO9bsyjT0WvQ=",
     "Issuer": "http://localhost:5161",
-    "Audience": "http://localhost:5161"
+    "Audience": "http://localhost:5161",
+    "ExpireHours": "24"
   },
   "Logging": {
     "LogLevel": {
