--- a/backend/LinkShortener/LinkShortener.csproj
+++ b/backend/LinkShortener/LinkShortener.csproj
@@ -17,6 +17,7 @@
           <PrivateAssets>all</PrivateAssets>
         </PackageReference>
         <PackageReference Include="Npgsql.EntityFrameworkCore.PostgreSQL" Version="9.0.4" />
+        <PackageReference Include="Standart.Hash.xxHash" Version="4.0.5" />
         <PackageReference Include="Swashbuckle.AspNetCore" Version="6.6.2" />
     </ItemGroup>
 
