--- a/backend/LinkShortener/appsettings.Development.json
+++ b/backend/LinkShortener/appsettings.Development.json
@@ -1,4 +1,13 @@
 {
+  "ConnectionStrings": {
+    "ApplicationDbContext": "Host=localhost;Port=5432;Username=yiit;Password=1234;Database=mydb"
+  },
+  "Jwt": {
+    "Secret": "DmFV/ne6KHVkA2T378kWfCRW2eLspfLTO9bsyjT0WvQ=",
+    "Issuer": "http://localhost:5161",
+    "Audience": "http://localhost:5161",
+    "ExpireHours": "24"
+  },
   "Logging": {
     "LogLevel": {
       "Default": "Information",
